Massege to adding into the list

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>2DO</title>
     <link rel="stylesheet" href="design.css" />
     <link rel="stylesheet" href="bootstrap-master/style.css" />
-    <script
-      type="text/javascript"
-      src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=1Z_peQZw9L2lzq9X-GncksbJPv6NRt5OFz5LEPCFMjitP8h2N_RvreI0HZqXlIlV"
-      charset="UTF-8"
-    ></script>
+    <script type="text/javascript" charset="UTF-8"></script>
   </head>
   <body style="background: url(Photos/fds.jpg)">
     <div class="col-lg-4" style="position: absolute">
